feat: add/update tests